# formatbin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dev.yml
src/formatbin/: __init__.py  filehandler.py  formatbin.py
src/formatbin/notebooks/: workbook.ipynb
tests/: test_formatbin.py
