[tool.poetry]
name = "formatbin"
version = "0.1.0"
description = ""
authors = ["venkataratnamb20 <venkat4ratnam@gmail.com>"]
readme = "README.md"
packages = [{include = "formatbin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
