[tool.poetry]
name = "formatbin"
version = "0.1.0"
description = "Process binary data from a file and create files with processed data."
authors = ["venkataratnamb20 <venkat4ratnam@gmail.com>"]
readme = "README.md"
packages = [{include = "formatbin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.0"


[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
black = "^24.4.2"
autopep8 = "^2.3.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
